app/assets/stylesheets/foreman_zs_theme/theme.scss
/* ... */
body.foreman-theme #data-toolbar,
body.foreman-theme .pf-v5-c-masthead #data-toolbar,
body.foreman-theme .pf-v6-c-masthead #data-toolbar,
body.foreman-theme .pf-v5-c-masthead .pf-v5-c-toolbar,
body.foreman-theme .pf-v6-c-masthead .pf-v6-c-toolbar,
body.foreman-theme .pf-v5-c-masthead .pf-v5-c-toolbar__content,
body.foreman-theme .pf-v6-c-masthead .pf-v6-c-toolbar__content,
body.foreman-theme .pf-v5-c-masthead .pf-v5-c-toolbar__content-section,
body.foreman-theme .pf-v6-c-masthead .pf-v6-c-toolbar__content-section,
body.foreman-theme .pf-v5-c-masthead .pf-v5-c-toolbar__group,
body.foreman-theme .pf-v6-c-masthead .pf-v6-c-toolbar__group,
body.foreman-theme .pf-v5-c-masthead .pf-v5-c-toolbar__item,
body.foreman-theme .pf-v6-c-masthead .pf-v6-c-toolbar__item {
  background: var(--zs-topbar) !important;
  background-color: var(--zs-topbar) !important;
  background-image: none !important;
}

body.foreman-theme .navbar-pf-vertical::before,
body.foreman-theme .navbar-pf-vertical::after,
body.foreman-theme .navbar::before,
body.foreman-theme .navbar::after,
body.foreman-theme .navbar-pf::before,
body.foreman-theme .navbar-pf::after,
body.foreman-theme .navbar-pf-alt::before,
body.foreman-theme .navbar-pf-alt::after,
body.foreman-theme .navbar-pf-navbar::before,
body.foreman-theme .navbar-pf-navbar::after,
body.foreman-theme .pf-v5-c-page__header::before,
body.foreman-theme .pf-v5-c-page__header::after,
body.foreman-theme .pf-v6-c-page__header::before,
body.foreman-theme .pf-v6-c-page__header::after {
  background: var(--zs-topbar) !important;
  background-color: var(--zs-topbar) !important;
  background-image: none !important;
  border-color: var(--zs-topbar) !important;
}

body.foreman-theme .pf-v5-c-page__header > *,
body.foreman-theme .pf-v6-c-page__header > *,
body.foreman-theme .pf-v5-c-masthead > *,
body.foreman-theme .pf-v6-c-masthead > *,
body.foreman-theme .navbar-pf > *,
body.foreman-theme .navbar-pf .container,
body.foreman-theme .navbar-pf .container-fluid,
body.foreman-theme .navbar-pf .navbar-header,
body.foreman-theme .navbar-pf .navbar-brand,
body.foreman-theme .navbar-pf .navbar-collapse,
body.foreman-theme .navbar-pf .navbar-left,
body.foreman-theme .navbar-pf .navbar-right,
body.foreman-theme .navbar-pf .navbar-menu,
body.foreman-theme .navbar-pf .navbar-nav,
body.foreman-theme .navbar-pf .navbar-nav > li,
body.foreman-theme .navbar-pf .navbar-nav > li > a,
body.foreman-theme .navbar-pf .navbar-primary,
body.foreman-theme .navbar-pf .navbar-persistent,
body.foreman-theme .navbar-pf .navbar-pf-navbar,
body.foreman-theme .navbar-pf .navbar-pf-vertical-nav,
body.foreman-theme .navbar-pf .navbar-utility,
body.foreman-theme .navbar-pf .navbar-utility > li,
body.foreman-theme .navbar-pf .navbar-utility > li > a,
body.foreman-theme .navbar-pf .navbar-form,
body.foreman-theme .navbar-pf #org-menu,
body.foreman-theme .navbar-pf #loc-menu,
body.foreman-theme .navbar-pf #account_menu,
body.foreman-theme .navbar-pf .dropdown > a,
body.foreman-theme .navbar-pf .dropdown-toggle,
body.foreman-theme .navbar-pf .btn,
body.foreman-theme .navbar-pf .btn-default,
body.foreman-theme .navbar-pf .bootstrap-select > .dropdown-toggle,
body.foreman-theme .navbar-pf .select2-container .select2-choice,
body.foreman-theme .navbar-pf .select2-choice,
body.foreman-theme .navbar-pf-vertical > *,
body.foreman-theme .navbar-pf-vertical .container,
body.foreman-theme .navbar-pf-vertical .container-fluid,
body.foreman-theme .navbar-pf-vertical .navbar-header,
body.foreman-theme .navbar-pf-vertical .navbar-brand,
body.foreman-theme .navbar-pf-vertical .navbar-collapse,
body.foreman-theme .navbar-pf-vertical .navbar-left,
body.foreman-theme .navbar-pf-vertical .navbar-right,
body.foreman-theme .navbar-pf-vertical .navbar-menu,
body.foreman-theme .navbar-pf-vertical .navbar-nav,
body.foreman-theme .navbar-pf-vertical .navbar-nav > li,
body.foreman-theme .navbar-pf-vertical .navbar-nav > li > a,
body.foreman-theme .navbar-pf-vertical .navbar-primary,
body.foreman-theme .navbar-pf-vertical .navbar-persistent,
body.foreman-theme .navbar-pf-vertical .navbar-pf-navbar,
body.foreman-theme .navbar-pf-vertical .navbar-pf-vertical-nav,
body.foreman-theme .navbar-pf-vertical .navbar-utility,
body.foreman-theme .navbar-pf-vertical .navbar-utility > li,
body.foreman-theme .navbar-pf-vertical .navbar-utility > li > a,
body.foreman-theme .navbar-pf-vertical .navbar-form,
body.foreman-theme .navbar-pf-vertical #org-menu,
body.foreman-theme .navbar-pf-vertical #loc-menu,
body.foreman-theme .navbar-pf-vertical #account_menu,
body.foreman-theme .navbar-pf-vertical .dropdown > a,
body.foreman-theme .navbar-pf-vertical .dropdown-toggle,
body.foreman-theme .navbar-pf-vertical .btn,
body.foreman-theme .navbar-pf-vertical .btn-default,
body.foreman-theme .navbar-pf-vertical .bootstrap-select > .dropdown-toggle,
body.foreman-theme .navbar-pf-vertical .select2-container .select2-choice,
body.foreman-theme .navbar-pf-vertical .select2-choice,
body.foreman-theme .navbar .navbar-header,
body.foreman-theme .navbar .navbar-brand,
body.foreman-theme .navbar .navbar-collapse,
body.foreman-theme .navbar .navbar-left,
body.foreman-theme .navbar .navbar-right,
body.foreman-theme .navbar .navbar-menu,
body.foreman-theme .navbar .navbar-nav,
body.foreman-theme .navbar .navbar-nav > li,
body.foreman-theme .navbar .navbar-nav > li > a,
body.foreman-theme .navbar .navbar-form,
body.foreman-theme .navbar .dropdown > a,
body.foreman-theme .navbar .dropdown-toggle,
body.foreman-theme .navbar .btn,
body.foreman-theme .navbar .btn-default,
body.foreman-theme .navbar .bootstrap-select > .dropdown-toggle,
body.foreman-theme .navbar .select2-container .select2-choice,
body.foreman-theme .navbar .select2-choice {
  background: var(--zs-topbar) !important;
  background-color: var(--zs-topbar) !important;
  background-image: none !important;
  border-color: var(--zs-topbar) !important;
  box-shadow: none !important;
  color: var(--zs-text) !important;
}
/* ... */

